fixing z-index in hot video

--- a/assets/scss/components/hot-video.scss
+++ b/assets/scss/components/hot-video.scss
@@ -14,7 +14,7 @@
 
   &_card{
     position: absolute;
-    z-index: 100;
+    z-index: 10;
     bottom: 10px;
     left: 9px;
 
